# iptv_player

./: CMakeLists.txt  Main.qml  README.md  main.cpp  playlistmanager.cpp  playlistmanager.h  playlistmodel.cpp  playlistmodel.h  test_playlist.m3u
